fixtures/cs-rng-01/good/module-level-math-shadow.ts
const Math = { random: () => 0.25 };

export function pickUiColor() {
	return Math.random();
}
