fixtures/cs-rng-01/bad/nested-arrow-auth-param.ts
export function outer(token: string) {
	const inner = () => Math.random();
	return { token, inner };
}
